--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<div id="same1">
+		</div>
+		<div id="same2">
+		</div>
+		<div id="same3">
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
