--- a/main.html
+++ b/main.html
@@ -9,14 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div id="same1">
-		</div>
-		<div id="same2">
-		</div>
-		<div id="same3">
-		</div>
-		
-	</div>
+        <div class="red"></div>
+        <div class="green"></div>
+        <div class="yellow"></div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
